--- a/config
+++ b/config
@@ -41,7 +41,8 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal -fa 'Monospace' -fs 12
+#bindsym $mod+Return exec i3-sensible-terminal -fa 'Monospace' -fs 12
+bindsym $mod+Return exec xfce4-terminal --hide-menubar
 
 # kill focused window
 bindsym $mod+q kill
@@ -61,13 +62,7 @@ bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
-
-# move focused window
-#bindsym $mod+Shift+j move left
-#bindsym $mod+Shift+k move down
-#bindsym $mod+Shift+l move up
-#bindsym $mod+Shift+semicolon move right
-
+f
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
@@ -80,12 +75,10 @@ bindsym $mod+f fullscreen toggle
 # change container layout (stacked, tabbed, toggle split)
 #bindsym $mod+s layout stacking
 #bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+bindsym $mod+Shift+e  layout toggle split
 
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec i3-msg exit
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -93,8 +86,20 @@ bar {
         status_command i3status
 }
 
+bindsym $mod+1 workspace number "1"
+bindsym $mod+2 workspace number "2"
+bindsym $mod+3 workspace number "3"
+bindsym $mod+4 workspace number "4"
+bindsym $mod+5 workspace number "5"
+bindsym $mod+6 workspace number "6"
+bindsym $mod+7 workspace number "7"
+bindsym $mod+8 workspace number "8"
+bindsym $mod+9 workspace number "9"
+bindsym $mod+0 workspace number "10"
+
 bindsym $mod+b exec brave-browser
 bindsym $mod+c exec java ~/first/cd.java
+bindsym $mod+e exec brave-browser keep.google.com
 bindsym $mod+i exec brave-browser discord.com/channels/@me
 bindsym $mod+m exec brave-browser mail.google.com/mail/u/0/h/
 bindsym $mod+r exec brave-browser drive.google.com/drive/my-drive
@@ -102,6 +107,7 @@ bindsym $mod+s exec brave-browser app.slack.com/client
 bindsym $mod+t exec brave-browser https://todoist.com/app/upcoming
 bindsym $mod+w exec brave-browser google.com/search?q=weather
 bindsym $mod+x exec i3lock
+bindsym $mod+Shift+x exec i3-msg exit
 bindsym $mod+y exec brave-browser https://youtube.com/playlist?list=LL
 
 bindsym $mod+Shift+h resize shrink width 10 px or 10 ppt
@@ -109,7 +115,6 @@ bindsym $mod+Shift+j resize grow height 10 px or 10 ppt
 bindsym $mod+Shift+k resize shrink height 10 px or 10 ppt
 bindsym $mod+Shift+l resize grow width 10 px or 10 ppt
 
-bindsym Mod1+Control+t exec i3-sensible-terminal -fa 'Monospace' -fs 12
+bindsym Mod1+Control+t exec xfce4-terminal --hide-menubar
 bindsym Print exec scrot
-
 exec xrandr --output eDP-1 --scale 0.8x0.8
